removed text-shadow on mobile devices as had issue with Samsung S6

--- a/main.css
+++ b/main.css
@@ -919,7 +919,7 @@ select {
     
 }
 
-@media (max-width: 420px) {
+@media (max-width: 425px) {
     .header-pic {
         height: 22.5vh;
     }
@@ -987,24 +987,12 @@ select {
         height: 350px;
         margin-top: 30px;
         border-radius: 12px;
-    }
-    
-    li.active a.hvr-grow {
-    text-shadow: 
-        0px 5px 30px rgba(255, 255, 255, 1), 
-        5px 0px 30px rgba(255, 255, 255, 1), 
-        0px -5px 30px rgba(255, 255, 255, 1), 
-        0px 5px 30px rgba(255, 255, 255, 1), 
-        10px -10px 30px rgba(255, 255, 255, 1), 
-        10px 10px 30px rgba(255, 255, 255, 1), 
-        -10px 10px 30px rgba(255, 255, 255, 1), 
-        -10px -10px 30px rgba(255, 255, 255, 1);
 }
 }
 
 /*----------------Media Queries Band Section-------------------*/
 
-@media (max-width: 420px) {
+@media (max-width: 425px) {
     img#jaggerImg,
     img#richardsImg,
     img#wattsImg,
@@ -1026,6 +1014,12 @@ select {
     }
 }
 
+/*----------------Issue with Text Shadow on Samsung S6 so removing text shadow on mobile devices-------------------*/
 
+@media (max-width: 767px) {
+    li.active a.hvr-grow {
+    text-shadow: none;
+}
+}
 
 
